2004-04-18  Iwata <b6330015@ipc.kit.jp>

	* timidity/flac_a.c : Add
	* configure.in, timidity/output.c, timidity/timidity.c,
	  timidity/Makefile.am, : Add libFLAC supert

2004-04-14  Kentaro Sato <kentaro@ranvis.com>

	* libarc/arc.c, timidity/timidity.c:
	  Removed trailing directory separator from $basedir.

2004-04-13  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* autoconf/ao.m4: Add.
	* configure.in: Change to use ao.m4
	* autoconf/Makefile.am (EXTRA_DIST): ditto.

2004-04-13  Iwata <b6330015@ipc.kit.jp>

	* timidity/ao_a.c: Add.
	* configure.in: Add libao support
	* timidity/output.c: ditto.
	* timidity/Makefile.am (EXTRA_timidity_SOURCES): ditto.
	* timidity/timidity.c (parse_opt_h): ditto.

2004-04-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/common.[ch], timidity/timidity.c:
	  New syntax of *.cfg: $VARIABLE / ${VARIABLE}
	  They are replaced with the specific string before tokenizing.
	  $basedir is the only implemented one, which represents the base
	  directory of the cfg file being parsed.

2004-03-31  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: Change version to 'current' (timidity:3161)

2004-03-29  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* Makefile.am (EXTRA_DIST): Add entry for ChangeLog.2
	* configure.in: Change version to 'development'
	* ChangeLog.2: Add
	* ChangeLog : Wipe

For the changes before 2.13.0, see ChangeLog.2